--- a/src/index.css
+++ b/src/index.css
@@ -722,6 +722,10 @@ video {
   right: 0px;
 }
 
+.top-full {
+  top: 100%;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -730,20 +734,12 @@ video {
   left: 0px;
 }
 
-.top-full {
-  top: 100%;
-}
-
 .z-20 {
   z-index: 20;
 }
 
 .order-last {
   order: 9999;
-}
-
-.m-3 {
-  margin: 0.75rem;
 }
 
 .block {
@@ -774,8 +770,16 @@ video {
   height: 6rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .h-\[60vh\] {
   height: 60vh;
+}
+
+.h-14 {
+  height: 3.5rem;
 }
 
 .h-96 {
@@ -788,22 +792,6 @@ video {
 
 .h-\[6em\] {
   height: 6em;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-14 {
-  height: 3.5rem;
 }
 
 .max-h-\[100px\] {
@@ -826,32 +814,24 @@ video {
   width: 16rem;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
 .w-10 {
   width: 2.5rem;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-16 {
-  width: 4rem;
 }
 
 .w-20 {
   width: 5rem;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
 .w-14 {
   width: 3.5rem;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .flex-initial {
@@ -942,6 +922,12 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.25rem * var(--tw-space-x-reverse));
   margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1079,6 +1065,10 @@ video {
   border-color: rgba(4, 120, 87, var(--tw-border-opacity));
 }
 
+.border-shadow {
+  border-color: rgba(0, 0, 0, 0.2);
+}
+
 .border-green-700 {
   --tw-border-opacity: 1;
   border-color: rgba(4, 120, 87, var(--tw-border-opacity));
@@ -1109,12 +1099,12 @@ video {
   background-color: rgba(150, 207, 190, var(--tw-bg-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-secondary\/50 {
   background-color: rgba(213, 245, 230, 0.5);
+}
+
+.bg-transparent {
+  background-color: transparent;
 }
 
 .bg-shadow {
@@ -1171,12 +1161,12 @@ video {
   padding: 1.5rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-8 {
   padding: 2rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-2 {
@@ -1194,6 +1184,11 @@ video {
   padding-right: 0.75rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1204,59 +1199,12 @@ video {
   padding-right: 1rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .pl-5 {
   padding-left: 1.25rem;
 }
 
 .pb-8 {
   padding-bottom: 2rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
 }
 
 .text-center {
@@ -1284,24 +1232,24 @@ video {
   line-height: 2.5rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
 
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
 }
 
 .text-3xl {
@@ -1354,11 +1302,6 @@ video {
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgba(220, 38, 38, var(--tw-text-opacity));
-}
-
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgba(248, 113, 113, var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1517,10 +1460,6 @@ video {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-.focus\:underline:focus {
-  text-decoration: underline;
-}
-
 .focus\:opacity-70:focus {
   opacity: 0.7;
 }
@@ -1556,16 +1495,12 @@ video {
     height: 8rem;
   }
 
-  .md\:h-12 {
-    height: 3rem;
+  .md\:h-28 {
+    height: 7rem;
   }
 
   .md\:h-full {
     height: 100%;
-  }
-
-  .md\:h-28 {
-    height: 7rem;
   }
 
   .md\:w-96 {
@@ -1576,18 +1511,6 @@ video {
     width: 50%;
   }
 
-  .md\:w-32 {
-    width: 8rem;
-  }
-
-  .md\:w-12 {
-    width: 3rem;
-  }
-
-  .md\:w-120 {
-    width: 30rem;
-  }
-
   .md\:w-28 {
     width: 7rem;
   }
@@ -1596,24 +1519,20 @@ video {
     width: 100%;
   }
 
+  .md\:w-32 {
+    width: 8rem;
+  }
+
+  .md\:w-120 {
+    width: 30rem;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
 
   .md\:flex-col {
     flex-direction: column;
-  }
-
-  .md\:items-center {
-    align-items: center;
-  }
-
-  .md\:gap-0 {
-    gap: 0px;
-  }
-
-  .md\:gap-2 {
-    gap: 0.5rem;
   }
 
   .md\:gap-6 {
@@ -1644,11 +1563,6 @@ video {
     padding-right: 0.5rem;
   }
 
-  .md\:py-1 {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-  }
-
   .md\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
@@ -1671,11 +1585,5 @@ video {
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:justify-center {
-    justify-content: center;
   }
 }
